@@ -29,6 +29,7 @@ Moose::Autobox            = 0.09 ; flattten
 Path::Class               = 0
 Scalar::Util              = 0
 autodie                   = 0
+version                   = 0.77 ; new API
 
 [Prereqs / TestRequires]
 Test::More                = 0.88 ; done_testing
